feat: send the object back for request that creates or modifies an object (post, comment)
